--- a/DnDCharCtor.Resources/StringResources.de-DE.resx
+++ b/DnDCharCtor.Resources/StringResources.de-DE.resx
@@ -303,7 +303,7 @@
   <data name="Character_Strength" xml:space="preserve">
     <value>Stärke</value>
   </data>
-  <data name="Character_Skill" xml:space="preserve">
+  <data name="Character_Skillfulness" xml:space="preserve">
     <value>Geschicklichkeit</value>
   </data>
   <data name="Character_Constitution" xml:space="preserve">
