--- a/DnDCharCtor.Resources/StringResources.de-DE.resx
+++ b/DnDCharCtor.Resources/StringResources.de-DE.resx
@@ -399,4 +399,7 @@
   <data name="Character_Skills_PerceptionWisdom" xml:space="preserve">
     <value>Wahrnehmung (Weisheit)</value>
   </data>
+  <data name="Character_Skills" xml:space="preserve">
+    <value>Ferigkeiten</value>
+  </data>
 </root>
