--- a/DnDCharCtor.Resources/StringResources.de-DE.resx
+++ b/DnDCharCtor.Resources/StringResources.de-DE.resx
@@ -400,7 +400,7 @@
     <value>Wahrnehmung (Weisheit)</value>
   </data>
   <data name="Character_Skills" xml:space="preserve">
-    <value>Ferigkeiten</value>
+    <value>Fertigkeiten</value>
   </data>
   <data name="CharacterEditor_Skills_Edit" xml:space="preserve">
     <value>Bearbeite Fertigkeiten</value>
