Added stat modifier calculation to PropertiesCard component
- Created StringExtensions class with ToInt extension method to convert string to integer.
- Updated PropertiesCard.razor to display stat modifiers for character properties using DndRulesService.
- Added Stat_Modifier string resource to StringResources.resx, StringResources.en-US.resx, and StringResources.de-DE.resx.
- Registered IDndRulesService and DndRulesService in ServiceRegister.cs.

--- a/DnDCharCtor.Resources/StringResources.en-US.resx
+++ b/DnDCharCtor.Resources/StringResources.en-US.resx
@@ -405,4 +405,7 @@
   <data name="CharacterEditor_Skills_Edit" xml:space="preserve">
     <value>Edit skills</value>
   </data>
+  <data name="Stat_Modifier" xml:space="preserve">
+    <value>Stat Modifier</value>
+  </data>
 </root>
