--- a/DnDCharCtor.Resources/StringResources.de-DE.resx
+++ b/DnDCharCtor.Resources/StringResources.de-DE.resx
@@ -405,4 +405,7 @@
   <data name="CharacterEditor_Skills_Edit" xml:space="preserve">
     <value>Bearbeite Fertigkeiten</value>
   </data>
+  <data name="Stat_Modifier" xml:space="preserve">
+    <value>Status-Modifikator</value>
+  </data>
 </root>
