Update localization for character properties
Introduce new localized strings for "Ability Score" and "Stat Modifier" under `Character_Properties` namespace. Replace old `Stat_Modifier` resource with `Character_Properties_StatModifier` in all relevant resource files. Update `PropertiesCard.razor` and `EditPropertiesDialog.razor` to use new localized strings for better clarity and localization.

--- a/DnDCharCtor.Resources/StringResources.de-DE.resx
+++ b/DnDCharCtor.Resources/StringResources.de-DE.resx
@@ -405,7 +405,10 @@
   <data name="CharacterEditor_Skills_Edit" xml:space="preserve">
     <value>Bearbeite Fertigkeiten</value>
   </data>
-  <data name="Stat_Modifier" xml:space="preserve">
+  <data name="Character_Properties_StatModifier" xml:space="preserve">
     <value>Status-Modifikator</value>
+  </data>
+  <data name="Character_Properties_AbilityScore" xml:space="preserve">
+    <value>Fähigkeits-Wert</value>
   </data>
 </root>
